--- a/app.wxss
+++ b/app.wxss
@@ -4,6 +4,8 @@ page{
     background-color: #F8F8F8;
     font-size: 16px;
     font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+    width:100%;
+    height:100%;
 }
 .page__hd {
     padding: 40px;
@@ -43,7 +45,6 @@ page{
   padding: 10rpx 0;
   box-sizing: border-box;
 } 
-
 .green{
     color: #09BB07;
 }
