--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,5 @@
 <!--index.wxml-->
+<view class="backgroundImage">
 <view class="container">
 <view class="userinfo">
 <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
@@ -10,4 +11,5 @@
 <view>华图教育 - 微信小程序 DEMO </view>
 <button bindtap='ifUserInDB'>getUserData</button>
 <image src="../../img_temp/temp.jpg" />
+</view>
 </view>
