--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,11 @@
 /**index.wxss**/
+.backgroundImage {
+    background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgUWquHLVu3bfCaCWoGBlKOM-KKGAww-obRsSujMG3AQMKNySe');   
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
 .userinfo {
   display: flex;
   flex-direction: column;
