--- a/pages/personal_Info/personal_Info.wxss
+++ b/pages/personal_Info/personal_Info.wxss
@@ -1,7 +1,61 @@
+.backgroundImage {
+    background: url('http://images.unsplash.com/photo-1517524285303-d6fc683dddf8?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEyMDd9');   
+    /*https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiQuA1f5TUEZWgyIkrH5opNa6sBVo1nXYcXMQUwCOn5wmO5hc*/
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.userinfo-avatar {
+  width: 128rpx;
+  height: 128rpx;
+  margin: 20rpx;
+  border-radius: 50%;
+}
+
+.userinfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px;
+}
+
 .personal_container {
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   padding: 10rpx 0;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
 }
