--- a/app.wxss
+++ b/app.wxss
@@ -11,6 +11,7 @@ page{
 }
 .page__hd {
     padding: 40px;
+    line-height: 1.6;
 }
 .page__bd {
     padding-bottom: 40px;
@@ -103,17 +104,6 @@ checkbox, radio{
     margin-bottom: 10px;
 }
 
-.page {
-    min-height: 100%;
-    flex: 1;
-    background-color: #FBF9FE;
-    font-size: 16px;
-    font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
-    overflow: hidden;
-}
-.page__hd{
-    padding: 40px;
-}
 .page__title{
     display: block;
     font-size: 20px;
