--- a/pages/test/multiple_choice/multiple_choice.wxss
+++ b/pages/test/multiple_choice/multiple_choice.wxss
@@ -166,11 +166,15 @@ swiper-item image {
 }
 
 .image-red {
-    border-color:red; 
-    border-style:solid;
+    border-color: #ed3f14; 
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 5px;
 }
 
 .image-green {
-    border-color:green; 
-    border-style:solid;
+    border-color: #19be6b; 
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 5px;
 }
