--- a/pages/test/multiple_choice/multiple_choice.wxml
+++ b/pages/test/multiple_choice/multiple_choice.wxml
@@ -65,25 +65,21 @@
                         <view class="img-box-result">
                             <!-- correct = 1, correct;  correct = 0, incorrect -->
                             <block wx:if="{{item.correct == 1}}">
-                            <image src="{{question_content.url}}"
-                                   class="image-result {{item.answer==question_content.answer_id ?'image-green':''}}" 
-                                   mode="aspectFill" 
-                                   lazy-load="true"/>
+                                <image src="{{question_content.url}}" class="image-result {{item.answer==question_content.answer_id ?'image-green':''}}" mode="aspectFill" lazy-load="true" />
                             </block>
                             <block wx:else>
-                                <image src="{{question_content.url}}"
-                                   class="image-result {{item.answer==question_content.answer_id ?'image-red':''}}{{item.question_answer==question_content.answer_id ?'image-green':''}}" 
-                                   mode="aspectFill" 
-                                   lazy-load="true"/>
+                                <image src="{{question_content.url}}" class="image-result {{item.answer==question_content.answer_id ?'image-red':''}}{{item.question_answer==question_content.answer_id ?'image-green':''}}" mode="aspectFill" lazy-load="true" />
                             </block>
                         </view>
                         <view class="good-title">{{question_content.answer_title}}</view>
                     </view>
                 </view>
-
             </van-collapse-item>
             <text decode="{{true}}" space="{{true}}">&nbsp;&nbsp;</text>
         </van-collapse>
+    </view>
+    <view hidden="{{isFinish == false}}">
+        <i-button bind:click="homepage" type="success" shape="circle" size="small">返回主頁</i-button>
     </view>
 </block>
 <!-- <view class="page_ft"></view> -->
