--- a/pages/collection_list/collection_list.wxml
+++ b/pages/collection_list/collection_list.wxml
@@ -1,6 +1,6 @@
 <view class="i-swipeout-demo">
-    <view class="i-swipeout-demo-title">{{article_target}}</view>
-    <view wx:for="{{article}}" data-id="{{item.article_id}}" bindtap="clickArticle">
+    <view class="i-swipeout-demo-title">我的收藏</view>
+    <view wx:for="{{collections}}" data-id="{{item.collection_article_id}}" bindtap="clickCollection">
         <i-swipeout i-class="i-swipeout-demo-item" operateWidth="{{120}}">
             <view slot="content">
                 <view class="i-swipeout-image">
@@ -12,8 +12,8 @@
                 </view>
             </view>
             <view slot="button" class="i-swipeout-demo-button-group" style="background:#2db7f5;">
-                <view class="i-swipeout-demo-button" style="width:60px" data-id="{{index}}" bindtap="actionLike">
-                    <i-icon size="32" type="like_fill"></i-icon>
+                <view class="i-swipeout-demo-button" style="width:60px" bindtap="actionUnlike">
+                    <i-icon size="32" type="undo"></i-icon>
                 </view>
                 <view class="i-swipeout-demo-button" style="width:60px" bindtap="actionCancel">
                     <i-icon size="32" type="delete_fill"></i-icon>
