--- a/app.wxss
+++ b/app.wxss
@@ -5,7 +5,7 @@ page{
     font-size: 16px;
     font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
     width:100%;
-    background: url('https://huatu.project.tszho.me/CoolAdmin-master/images/front-end/wallpaper.jpg');   
+    background: url('https://huatu.project.tszho.me/front-end/wallpaper.jpg');   
     background-repeat: repeat;
     background-size: cover;
 }
